# gitlab-token-checker

./: .gitignore  README.md  gitlab_tokens.py  pyproject.toml  pytest.ini
.github/workflows/: deploy-lambda.yml
terraform/: github_oidc.tf  lambda.tf  provider.tf  s3.tf  variables.tf
terraform/aws-lambda/: iam.tf  main.tf  outputs.tf  secrets-manager.tf  variables.tf
tests/: test_gitlab_tokens.py
