[project]
name = "gitlab-token-checker"
version = "0.1.0"
description = ""
authors = [
    {name = "Dmitriy Serbeniuk",email = "dserbenyukgood@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "botocore (>=1.38.12,<2.0.0)",
    "boto3 (>=1.38.12,<2.0.0)"
]

[tool.poetry]
packages = [{include = "gitlab_token_checker", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
poetry-plugin-export = "^1.8"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
